# ChangeLog for x11-terms/evilvte
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/evilvte/ChangeLog,v 1.30 2012/01/04 05:36:10 vapier Exp $

  04 Jan 2012; Mike Frysinger <vapier@gentoo.org> evilvte-0.4.9.ebuild,
  evilvte-0.5.0.ebuild:
  Drop `use savedconfig` logic that the savedconfig eclass handles itself.

  23 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> evilvte-0.5.0.ebuild:
  amd64/x86 stable

*evilvte-0.5.0 (20 Nov 2011)

  20 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> +evilvte-0.5.0.ebuild:
  Version bump.

  20 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> -evilvte-0.4.8.ebuild,
  -evilvte-0.5.0_pre1.ebuild:
  old

  11 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> evilvte-0.4.9.ebuild:
  x86 stable wrt bug #389585

  05 Nov 2011; Markos Chandras <hwoarang@gentoo.org> evilvte-0.4.9.ebuild:
  Stable on amd64 wrt bug #389585

*evilvte-0.5.0_pre1 (14 Oct 2011)
*evilvte-0.4.9 (14 Oct 2011)

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +evilvte-0.4.9.ebuild,
  +evilvte-0.5.0_pre1.ebuild:
  Version bump to 0.4.9 final (stable candidate) and _pre1 without KEYWORDS

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -evilvte-0.4.6.ebuild,
  -evilvte-0.4.9_pre2.ebuild, -evilvte-0.4.9_pre4.ebuild:
  old

*evilvte-0.4.9_pre4 (09 Jul 2011)

  09 Jul 2011; Samuli Suominen <ssuominen@gentoo.org>
  +evilvte-0.4.9_pre4.ebuild:
  Version bump.

  26 May 2011; Markus Meier <maekke@gentoo.org> evilvte-0.4.8.ebuild:
  x86 stable, bug #365577

  06 May 2011; Markos Chandras <hwoarang@gentoo.org> evilvte-0.4.8.ebuild:
  Stable on amd64 wrt bug #365577

*evilvte-0.4.9_pre2 (01 May 2011)

  01 May 2011; Samuli Suominen <ssuominen@gentoo.org>
  +evilvte-0.4.9_pre2.ebuild:
  Version bump and use x11-libs/gtk+:3.

*evilvte-0.4.8 (28 Mar 2011)

  28 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> +evilvte-0.4.8.ebuild:
  Version bump.
