@@ -3,24 +3,16 @@ Hash: SHA1
 
 DIST evilvte-0.4.9.tar.gz 61286 RMD160 3df46cd9763d7086c9af67faa3ee6eb7ad390c16 SHA1 c44e3fa5cfb62c1fb6c7d43f26f6894b557b6f5b SHA256 d8d2e73b2e5e64d32ef914ae26a4f8a95bbd5ed7a30241ff6841530e8f8ff75c
 DIST evilvte-0.5.0.tar.xz 58436 RMD160 e740bcd08d16af5c077754f530033a33720fe68f SHA1 f0c3da878d42c8cd0345b7f012c865f46ec6e370 SHA256 8d32dd9f3b192e00c8111c406a90cc0da2e674e0f8c5a03854287d384e7edea8
+DIST evilvte-0.5.1.tar.xz 59732 RMD160 7e0b49031e6a8c0aef206d1752a384b1931432a8 SHA1 3ceef90d835b291b7ec994746231da7d047ed1fb SHA256 d48166677410e6cb577ee46014a138620bbc95b3425e0ee3f9b7e95ae3ba30cd
 EBUILD evilvte-0.4.9.ebuild 819 RMD160 fd3832cfc457d8048b70740869d9f09b41cdaf39 SHA1 5f40c3e5abf799dc76c0f666f8d15b85dd04558d SHA256 effb4fee75f0c8d3d7e46d409b55f6eef832d88a83c61341e56ca0b1aa0c2333
 EBUILD evilvte-0.5.0.ebuild 832 RMD160 1986bb216022f70cb191728434bf3c84e4cb45d6 SHA1 3cbf3e5ce73cd77d96a177b4f481342402273501 SHA256 924d30271c45b1b56700526b3e632c8c73664684711c719d52df6440cc9b9790
-MISC ChangeLog 4413 RMD160 ad8022a41c0ff47f7c42a16d1852c5904c128a2a SHA1 ec3a4599a585f3f6f3d6cbf2b7063b0d64c7ca0a SHA256 ee78cfaf3d7e1e8fa229adb98051ffe8aa4313479d39c1a7ff805e0ba8b68723
+EBUILD evilvte-0.5.1.ebuild 874 RMD160 ea2eb2ca3c2409dac18cba94e18f40ccdbb101fe SHA1 551c78d73265b7330ba0b9ddde8ecd596847cedd SHA256 988251be9f814f4b48e7d905318feff25443f2e3683709b44c176637d4eeab36
+MISC ChangeLog 4561 RMD160 f4b88ff094c294021958ac2dd3bc3e88de4a57f4 SHA1 25402cadda7cbab730fbef860882802cc397661f SHA256 92234a66aa4da9e5b9e9e741d40cb4c082573812f0e18e863257d6cf5734a736
 MISC metadata.xml 167 RMD160 6f174fdd5033945a3da1b7bbea9796fe17ba2bf8 SHA1 26b8b030985c93a71d6d34f25249320a30b22f36 SHA256 63163ddb9082af2890999b3c825b2d21df911f59611694e0e077e75a12bf7241
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPA+VhAAoJELEHsLL7fEFWf14QAMHANvUglL8MC6HCaMCLJR9U
-6tXGYZZhkkhaL0JHM3sJLk56tpCIIPpqQski8Tz7mMkaMjsz0naHvnlADq0amtFh
-ZYxlBsDYeuORyp2r+B6rcbExh7UuqDDtDndjVSUva6z1YaqR9qvikAJCbrMN3QQI
-J2iT7YC9uICvr3wmSVyypuTUmigNq4wYat5ucFIWjPbExIKsdajhNq/zPdCKsGPu
-lDHLy/nLAoUX0pDXgtlH37pWR3MrLu2lsFDar4TvTaIuWGDOO+Q0ss5W8RGTFrG3
-H+kL7UnlbLKMIiAf3bZcNfQdmnKBjho9xEYu2GV1xuQ4FMoOQrSYIGCSrrOseaNE
-BKc5x6sm41wbGx4ecg1GaYQ38v+dsYbP2jJiQyG3IFkh7AJ1681CIkPpt+A4Dhkm
-tbj293Dg2zi7VyMqEmO61GMmEP5eJET4tEaMzJKRsqQOhWn3/9guofzxI76M/xlG
-LdgUR9iuBegM1yscMFJjCC2gEmSMGFVK922lzf4Kminggtl069WtmP4pCIGFlYSy
-K1ss4QZcfkFTaNDTmjc3pkIfyYEF0vw7cMK1riu60+VABz/BGFPYm/Mdw/7sqrff
-RAHM/GBfvV5GKlLWKscNRbD0yTCdvcbI8c5bfDJMqJMGbZpRqEmrQr7CmnizTzSA
-AFdOBye4tW8uYUi5EKcW
-=gFOt
+iEYEARECAAYFAk+YaLcACgkQVWmRsqeSphMRqQCeOOBOOVKmmz0S78JGuOXBVjYh
+0PgAn2UsAPBSgku0RwnRbH1uFBoXEZ0m
+=K0zZ
 -----END PGP SIGNATURE-----
